--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test/task.test.js",
     "start": "nodemon app"
   },
   "author": "Syahrun Fathan Hidayah",
@@ -18,6 +18,12 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.8.0",
+    "supertest": "^7.0.0",
     "uuid": "^11.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.8.2"
   }
 }
