--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "mocha": "^10.8.2"
+    "mocha": "^10.8.2",
+    "nodemon": "^3.1.7"
   }
 }
